# jse-radar

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml  test.ipynb
.github/: ci.yml
.github/scripts/: run_pipeline.py
dashboard/: app.py  data_loader.py  layout.py
notebooks/: 01_eda_jse_equities.ipynb  02_regime_analysis.ipynb  03_modeling_and_backtest.ipynb
scripts/: check_markov.py  refresh.bat  run_backtest.py  run_pipeline.py  verify_refresh.py
src/jse_radar/: __init__.py  config.py
src/jse_radar/analysis/: __init__.py  correlation.py  macro_regime.py  signals.py
src/jse_radar/dashboard/: __init__.py  callbacks.py
src/jse_radar/data/: __init__.py  equity_fetcher.py  fetcher.py  macro_fetcher.py  pipeline.py  wb_fetcher.py
src/jse_radar/modeling/: __init__.py  backtester.py  markov_chain.py  regime_predictor.py
src/jse_radar/processing/: __init__.py  equity_processor.py  macro_processor.py  master_builder.py
src/jse_radar/utils/: __init__.py  data_quality.py  logger.py
tests/: test_backtester.py  test_config.py  test_correlation.py  test_data_quality.py  test_equity_processor.py  test_macro_processor.py  test_macro_regime.py  test_markov_chain.py  test_master_builder.py  test_regime_predictor.py  test_signals.py
